nesc-frontend/src/test/resources/integration/programs/bad/bad21/C.nc
/* Signaling a non-existent bare event. */

configuration C
{
}
implementation
{
   components M;
}
